adiciona section 9